--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -59,7 +59,7 @@ stages:
         displayName: 'Enable signing'
         inputs:
           targetType: filePath
-          filePath: 'kiota-abstractions-dotnet\scripts\EnableSigning.ps1'
+          filePath: 'scripts\EnableSigning.ps1'
           arguments: '-projectPath "$(Build.SourcesDirectory)/src/Microsoft.Kiota.Cli.Commons.csproj"'
           pwsh: true
         enabled: true
@@ -205,7 +205,7 @@ stages:
         condition: and(contains(variables['build.sourceBranch'], 'refs/heads/main'), succeeded())
         inputs:
           targetType: 'filePath'
-          filePath: $(System.DefaultWorkingDirectory)\kiota-abstractions-dotnet\scripts\ValidateProjectVersionUpdated.ps1
+          filePath: $(System.DefaultWorkingDirectory)\scripts\ValidateProjectVersionUpdated.ps1
           arguments: '-projectPath "$(Build.SourcesDirectory)/src/Microsoft.Kiota.Cli.Commons.csproj" -packageName "Microsoft.Kiota.Cli.Commons"'
           pwsh: true
 
