--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -72,7 +72,7 @@ stages:
         inputs:
           command: test
           projects: '$(Build.SourcesDirectory)\Microsoft.Kiota.Cli.Commons.sln'
-          arguments: '--configuration $(BuildConfiguration) --no-build --framework net6.0'
+          arguments: '--configuration $(BuildConfiguration) --no-build'
 
       # CredScan
       - task: securedevelopmentteam.vss-secure-development-tools.build-task-credscan.CredScan@2
