--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -110,6 +110,11 @@ stages:
           CredScan: true
           PoliCheck: true
 
+      - task: UseDotNet@2
+        displayName: 'Add .NET 2'
+        inputs:
+          version: 2.x
+
       - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
         displayName: 'ESRP DLL Strong Name'
         inputs:
