Move internals visible declaration to csproj file

--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -64,7 +64,7 @@ stages:
         displayName: 'Build Microsoft.Kiota.Cli.Commons'
         inputs:
           projects: '$(Build.SourcesDirectory)\Microsoft.Kiota.Cli.Commons.sln'
-          arguments: '--configuration $(BuildConfiguration) --no-incremental'
+          arguments: '--configuration $(BuildConfiguration) --no-incremental -p:DefineConstants=SIGNED'
 
       # Run the Unit test
       - task: DotNetCoreCLI@2
