--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -51,30 +51,12 @@ stages:
           versionSpec: '>=5.2.0'
           checkLatest: true
 
-      - task: PowerShell@2
-        displayName: 'Enable library signing'
-        inputs:
-          targetType: filePath
-          filePath: 'scripts\EnableSigning.ps1'
-          arguments: '-projectPath "$(ProjectFile)"'
-          pwsh: true
-        enabled: true
-
-      - task: PowerShell@2
-        displayName: 'Enable tests signing'
-        inputs:
-          targetType: filePath
-          filePath: 'scripts\EnableSigning.ps1'
-          arguments: '-projectPath "$(Build.SourcesDirectory)src/Microsoft.Kiota.Cli.Commons.Tests/Microsoft.Kiota.Cli.Commons.Tests.csproj"'
-          pwsh: true
-        enabled: true
-
       # Build the Product project
       - task: DotNetCoreCLI@2
         displayName: 'Build Microsoft.Kiota.Cli.Commons'
         inputs:
           projects: '$(Build.SourcesDirectory)\Microsoft.Kiota.Cli.Commons.sln'
-          arguments: '--configuration $(BuildConfiguration) --no-incremental -p:PublicKey=$(PublicKey)'
+          arguments: '--configuration $(BuildConfiguration) --no-incremental -p:DelaySign=true -p:SignAssembly=true -p:PublicKey=$(PublicKey)'
 
       # Run the Unit test
       - task: DotNetCoreCLI@2
