--- a/src/Microsoft.Kiota.Cli.Commons/Microsoft.Kiota.Cli.Commons.csproj
+++ b/src/Microsoft.Kiota.Cli.Commons/Microsoft.Kiota.Cli.Commons.csproj
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <VersionPrefix>0.5.1</VersionPrefix>
     <VersionSuffix>preview.1</VersionSuffix>
+    <IsTrimmable>true</IsTrimmable>
 
     <!-- Enable this line once we go live to prevent breaking changes -->
     <!-- <PackageValidationBaselineVersion>1.0.0</PackageValidationBaselineVersion> -->
