--- a/src/Microsoft.Kiota.Cli.Commons/Microsoft.Kiota.Cli.Commons.csproj
+++ b/src/Microsoft.Kiota.Cli.Commons/Microsoft.Kiota.Cli.Commons.csproj
@@ -8,8 +8,7 @@
     <VersionPrefix>1.0.0</VersionPrefix>
     <IsTrimmable>true</IsTrimmable>
 
-    <!-- Enable this line once we go live to prevent breaking changes -->
-    <!-- <PackageValidationBaselineVersion>1.0.0</PackageValidationBaselineVersion> -->
+    <PackageValidationBaselineVersion>1.0.0</PackageValidationBaselineVersion>
   </PropertyGroup>
   <PropertyGroup>
     <Description>Commons library for the Kiota generated CLIs in dotnet.</Description>
