--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -7,6 +7,7 @@ trigger:
   branches:
     include:
       - main
+      - refs/tags/v*
 
 pr: none
 
@@ -203,7 +204,7 @@ extends:
               targetPath: $(Build.ArtifactStagingDirectory)/Nugets
 
     - stage: deploy
-      condition: and(contains(variables['build.sourceBranch'], 'refs/heads/main'), succeeded())
+      condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/v'))
       dependsOn: build
       jobs:
         - deployment: deploy_cli_commons
