--- a/src/Microsoft.Kiota.Cli.Commons/Microsoft.Kiota.Cli.Commons.csproj
+++ b/src/Microsoft.Kiota.Cli.Commons/Microsoft.Kiota.Cli.Commons.csproj
@@ -5,7 +5,7 @@
     <LangVersion>latest</LangVersion>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <VersionPrefix>1.1.1</VersionPrefix>
+    <Version>1.1.1</Version>
     <IsTrimmable>true</IsTrimmable>
 
     <PackageValidationBaselineVersion>1.0.0</PackageValidationBaselineVersion>
