--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,11 +5,14 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 10
-  labels:
-    - CLI
+  commit-message:
+    # Prefix all commit messages with "chore: "
+    prefix: "chore"
 
 - package-ecosystem: github-actions
   directory: "/"
   schedule:
     interval: daily
   open-pull-requests-limit: 10
+  commit-message:
+    prefix: "chore"
